[package]
name = "manotp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
base32 = "0.4.0"
console = "0.15.1"
dialoguer = "0.10.2"
indicatif = "0.16.2"
openssl = "0.10.41"
openssl-sys = "0.9.75"
thiserror = "1.0.31"
